kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: development

spec:
  replicas: 2

  selector:
    matchLabels:
      app: solar-system

  template:
    metadata:
      labels:
        app: solar-system

    spec:
      containers:
      - name: solar-system
        image: praba123/solar-system:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
