kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: solar-system
  namespace: development

spec:
  rules:
    - host: solar-system-development.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: solar-system
                port:
                  number: 3000
            path: /
            pathType: Prefix

  tls:
    - hosts:
        - solar-system-development.127.0.0.1.nip.io
      secretName: ingress-local-tls
